--- a/style.css
+++ b/style.css
@@ -5,3 +5,110 @@
     --white: #FDFFFF;
     --silver: #6B654B;
 }
+body {
+    background-color: var(--white);
+}
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+    box-sizing: border-box;
+    font-size: 1.2rem;
+}
+a {
+    text-decoration-line: none;
+}
+img {
+    width: 100%;
+    height: 100%;
+}
+section {
+    width: 100%;
+    height: 100vh;
+}
+#home {
+    display: grid;
+    place-items: center;
+}
+nav{
+    width: 100%; 
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+    background: var(--yellow);
+    position: fixed;
+}
+.logo {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 1rem;
+    letter-spacing: 0.8rem;
+    font-weight: bolder;
+}
+.logo span{
+    color: var(--green);
+    font-weight: bolder;
+    font-family: 'Rock Salt', cursive;
+}
+nav a{
+    color: var(--black);
+}
+ul {
+    height: 5vh;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+}
+li {
+    list-style-type: none;
+    margin-right: 2rem;
+}
+.slides {
+    width: 50rem;
+    height: 35rem;
+    display: flex;
+    overflow: hidden;
+}
+.navigation {
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+    width: 18rem;
+}
+.bar {
+    width: 3rem;
+    height: 1.5rem;
+    border: 0.2rem solid var(--white);
+}
+input{
+    visibility: hidden;
+    position: absolute;
+}
+.slide {
+    width: 50rem;
+    height: auto;
+}
+.slide img {
+    width: 100%;
+    height: 100%;
+}
+#r1:checked ~ .s1{
+    margin-left: 0;
+}
+
+#r2:checked ~ .s1{
+    margin-left: -100%;
+}
+
+#r3:checked ~ .s1{
+    margin-left: -200%;
+}
+
+#r4:checked ~ .s1{
+    margin-left: -300%;
+}
+
+#r5:checked ~ .s1{
+    margin-left: -400%;
+}
+
