--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Lato', sans-serif;
     box-sizing: border-box;
     font-size: 1.2rem;
+    color: var(--black);
 }
 a {
     text-decoration-line: none;
@@ -29,10 +30,14 @@ section {
 #home {
     display: grid;
     place-items: center;
+    width: 100%;
+    height: 100vh;
+    background: rgba(255,	216,	0, 0.8);
+    opacity: ;
 }
 nav{
     width: 100%; 
-    height: 10vh;
+    height: 15vh;
     display: flex;
     justify-content: space-between;
     background: var(--yellow);
@@ -63,52 +68,36 @@ li {
     list-style-type: none;
     margin-right: 2rem;
 }
-.slides {
-    width: 50rem;
-    height: 35rem;
-    display: flex;
+/*slide show start*/
+#slide_show {
     overflow: hidden;
+    width: 100%;
+    height: 100vh;
+    z-index: -999;
 }
-.navigation {
-    display: flex;
-    justify-content: space-evenly;
-    position: absolute;
-    width: 18rem;
-}
-.bar {
-    width: 3rem;
-    height: 1.5rem;
-    border: 0.2rem solid var(--white);
-}
-input{
-    visibility: hidden;
-    position: absolute;
+.slide_w {
+   display: flex;
 }
 .slide {
-    width: 50rem;
-    height: auto;
-}
-.slide img {
+    height: 100vh;
     width: 100%;
-    height: 100%;
+    animation: slideshow 6s ease infinite alternate-reverse;
+ }
+@keyframes slideshow {
+    0%{margin-left: 0%;}
+    20% {margin-left: -100%;}
+    40%{margin-left: -200%;}
+    60% {margin-left: -300%;}
+    80% {margin-left: -400%;}
+} 
+/* my slide show (end) */
+#courses {
+    text-align: center;
 }
-#r1:checked ~ .s1{
-    margin-left: 0;
+#courses h1 {
+    font-size: 3rem;
 }
-
-#r2:checked ~ .s1{
-    margin-left: -100%;
+.courses {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
-
-#r3:checked ~ .s1{
-    margin-left: -200%;
-}
-
-#r4:checked ~ .s1{
-    margin-left: -300%;
-}
-
-#r5:checked ~ .s1{
-    margin-left: -400%;
-}
-
