--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ section {
     height: 100vh;
 }
 #home {
-    display: grid;
-    place-items: center;
     width: 100%;
     height: 100vh;
     background: rgba(255,	216,	0, 0.8);
@@ -43,6 +41,7 @@ nav{
     justify-content: space-between;
     background: var(--yellow);
     position: fixed;
+    z-index: 999;
 }
 .logo {
     margin-top: auto;
@@ -68,49 +67,42 @@ li {
     list-style-type: none;
     margin-right: 2rem;
 }
+
 /*slide show start*/
+
 #slide-show {
-    position: absolute;
-    top: 0; right: 0; left: 0; bottom: 0;
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
 }
 .back-slideshow {
-    width: 500%;
-    height: 100%;
-    z-index: -999;
     position: relative;
+    z-index: -999;
     display: flex;
-    animation: back-slideshow 10s ease-in-out 1s infinite alternate;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 .back-slideshow div {
     width: 100%;
- height: 100%;
-}
-@keyframes back-slideshow {
-0% {
-        margin-left: 0;
-    }
- 20% {
-        margin-left: -100%;
-    }
- 40% {
-        margin-left: -200%;
-    }
-    60%{
-        margin-left: -300%;
-    }
-    80% {
-        margin-left: -400%;
-    }
-    100% {
-        margin-left: -400%;
-    }
+    height: 100vh;
 }
 .front-slideshow {
-    display: none;
+    position: absolute;
+    width: 40%;
+    height: 55vh;
+    box-shadow: 3px 2px 15px var(--black);
+    overflow: hidden;
+    display: flex;
+    top: 8rem; right: 8rem;
 }
+
 /* my slide show (end) */
+
+/*ABOUT section start*/
+
+/*COURSES section start*/
 #courses {
     text-align: center;
     background: var(--white);
@@ -123,3 +115,4 @@ li {
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 4rem;
 }
+/*COURSES section start*/
