--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 :root {
     --black: #0B0500;
     --yellow: #ffd800;
-    --green: #35CE8D;
+    --green: #00ac09;
     --white: #FDFFFF;
     --silver: #6B654B;
     --maintext: 'Sora', sans-serif;
+    --transparent-yellow: rgba(255,	216,	0, 0.9);
 }
 body {
     background-color: var(--white);
@@ -16,6 +17,8 @@ body {
     box-sizing: border-box;
     font-size: 1.2rem;
     color: var(--black);
+    scroll-behavior: smooth;
+  scroll-snap-type: y proximity;
 }
 a {
     text-decoration-line: none;
@@ -28,32 +31,31 @@ section {
     width: 100%;
     height: 100vh;
 }
-#home {
-    width: 100%;
-    height: 100vh;
-    background: rgba(255,	216,	0, 0.8);
-    position: relative;
-}
+/* NAV BAR */
 nav{
     width: 100%; 
-    height: 15vh;
+    height: 12vh;
     display: flex;
     justify-content: space-between;
-    background: var(--yellow);
+    background: rgba(253, 255, 255, 0.7);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 7.0px );
+    -webkit-backdrop-filter: blur( 7.0px );
     position: fixed;
     z-index: 999;
+    transition: 0.7s ease-in-out;
+    text-transform: uppercase;
+}
+nav:hover {
+    background: rgba( 255, 216, 0, 0.65 );  
 }
 .logo {
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 1rem;
-    letter-spacing: 0.8rem;
-    font-weight: bolder;
+    width: 3rem; height: 3rem;
 }
-.logo span{
-    color: var(--green);
-    font-weight: bolder;
-}
+
 nav a{
     color: var(--black);
 }
@@ -68,39 +70,84 @@ li {
     margin-right: 2rem;
 }
 
-/*slide show start*/
-
-#slide-show {
+/* HOME PAGE SECTION*/
+#home {
     width: 100%;
     height: 100vh;
     position: relative;
-    overflow: hidden;
-}
-.back-slideshow {
-    position: relative;
-    z-index: -999;
     display: flex;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    background-color: var(--white);
+    z-index: 1;
 }
-.back-slideshow div {
-    width: 100%;
-    height: 100vh;
-}
-.front-slideshow {
+.home-image {
+    width: 60%;
+    height: auto;
     position: absolute;
+    right: 1rem; top: 10vh;
+}
+header {
     width: 40%;
-    height: 55vh;
-    box-shadow: 3px 2px 15px var(--black);
-    overflow: hidden;
+    height: 60vh;
+    margin-top: 25vh; 
+    text-align: center;
+    position: relative;
+    margin-left: 1.5rem;
     display: flex;
-    top: 8rem; right: 8rem;
+    flex-direction: column;
+}
+header h1 {
+    font-size: 5rem;
+    transition: 0.4s ease-in;
+    letter-spacing: 0.5rem;
+}
+header h2 {
+    letter-spacing: 0.9rem;
+    transition: 0.4s ease-in;
+    margin-top: 2rem;
+}
+header h1 span img{
+    width: 5rem;
+    position: relative;
+    transform: translateY(1rem);
+}
+header h1:hover {
+    color: var(--yellow);
+}
+header a {
+    margin: auto 5rem;
+    background-color: var(--yellow);
+    padding: 2rem;
+    border-radius: 48px;
+    background: linear-gradient(145deg, #e4e6e6, #ffffff);
+    box-shadow:  12px 12px 24px #a2a3a3, 
+             -12px -12px 24px #ffffff;
+    font-size: 1.4rem;
+    font-weight: bold;
+    transition: 2s ease-in-out;
 }
 
-/* my slide show (end) */
+header a:hover {
+    background: linear-gradient(145deg, #ffe700, #e6c200);
+}
+
 
 /*ABOUT section start*/
+#about {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--yellow);
+}
+.about-image {
+    width: 45%;
+    height: 80vh;
+    background: var(--white);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 7.0px );
+    -webkit-backdrop-filter: blur( 7.0px );
+    transform: translate(10%, 10vh);
+    border-radius: 4rem;
+}
+/*ABOUT section end*/
 
 /*COURSES section start*/
 #courses {
@@ -115,4 +162,4 @@ li {
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 4rem;
 }
-/*COURSES section start*/
+/*COURSES section end*/
