--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     font-size: 1.2rem;
     color: var(--black);
     scroll-behavior: smooth;
-  scroll-snap-type: y proximity;
+    scroll-snap-type: y proximity;
 }
 a {
     text-decoration-line: none;
@@ -45,9 +45,10 @@ nav{
     z-index: 999;
     transition: 0.7s ease-in-out;
     text-transform: uppercase;
+    font-size: 1rem;
 }
 nav:hover {
-    background: rgba( 255, 216, 0, 0.65 );  
+    background: rgba( 255, 216, 0, 0.85 );  
 }
 .logo {
     margin-top: auto;
@@ -55,7 +56,10 @@ nav:hover {
     margin-left: 1rem;
     width: 3rem; height: 3rem;
 }
-
+.logo:hover {
+    border: 3px solid var(--green);
+    border-radius: 10pxx;
+}
 nav a{
     color: var(--black);
 }
@@ -110,43 +114,60 @@ header h1 span img{
     position: relative;
     transform: translateY(1rem);
 }
-header h1:hover {
-    color: var(--yellow);
-}
 header a {
-    margin: auto 5rem;
+    margin: auto 8rem;
     background-color: var(--yellow);
     padding: 2rem;
     border-radius: 48px;
     background: linear-gradient(145deg, #e4e6e6, #ffffff);
-    box-shadow:  12px 12px 24px #a2a3a3, 
-             -12px -12px 24px #ffffff;
+    box-shadow:  12px 12px 24px #a2a3a3, -12px -12px 24px #ffffff;
     font-size: 1.4rem;
     font-weight: bold;
     transition: 2s ease-in-out;
 }
-
 header a:hover {
-    background: linear-gradient(145deg, #ffe700, #e6c200);
+    background: linear-gradient(to top,  #ffe700 5%, #e6c200 100%);
 }
-
-
 /*ABOUT section start*/
 #about {
     width: 100%;
     height: 100vh;
     background-color: var(--yellow);
+    display: grid;
+    place-items: center;
+    justify-content: space-evenly;
+    grid-template-columns: 1fr 1fr 1fr;
 }
-.about-image {
-    width: 45%;
-    height: 80vh;
-    background: var(--white);
+#about div {
+    position: relative;
+    height: 60vh;
+    width: 30vw;
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 7.0px );
-    -webkit-backdrop-filter: blur( 7.0px );
-    transform: translate(10%, 10vh);
     border-radius: 4rem;
+    cursor: default;
 }
+#about div:nth-child(3){
+    padding-left: 2rem;
+}
+#about div:nth-child(1), #about div:nth-child(3) {
+    background: var(--white);
+}
+#about div:nth-child(2){
+    text-align: center; 
+    background:  var(--yellow);
+    transition: 0.5s ease-in-out;
+}
+#about div:nth-child(2):hover {
+    background: rgba(253,255,255, 0.9);
+}
+#about div:nth-child(2) h1 {
+    font-size: 3rem;
+    margin-top: 2rem;
+}
+#about div:nth-child(2) p {
+    padding: 1.5rem;
+}
+
 /*ABOUT section end*/
 
 /*COURSES section start*/
