--- a/css/style.scss
+++ b/css/style.scss
@@ -1,22 +1,21 @@
-:root {
-    --black: #0B0500;
-    --yellow: #ffd800;
-    --green: #00ac09;
-    --white: #FDFFFF;
-    --silver: #6B654B;
-    --maintext: 'Sora', sans-serif;
-    --transparent-yellow: rgba(255,	216,	0, 0.9);
-}
+$black: #0B0500;
+$yellow: #ffd800;
+$green: #00ac09;
+$white: #FDFFFF;
+$silver: #6B654B;
+$maintext: 'Sora', sans-serif;
+$transparent-yellow: rgba(255,	216,	0, 0.9);
+
 body {
-    background-color: var(--white);
+    background-color: $white;
 }
 *{
     margin: 0;
     padding: 0;
-    font-family: var(--maintext);
+    font-family: $maintext;
     box-sizing: border-box;
     font-size: 1.2rem;
-    color: var(--black);
+    color: $black;
     scroll-behavior: smooth;
     scroll-snap-type: y proximity;
 }
@@ -54,11 +53,11 @@ nav:hover {
     width: 3rem; height: 3rem;
 }
 .logo:hover {
-    border: 3px solid var(--green);
-    border-radius: 10pxx;
+    border: 3px solid $green;
+    border-radius: 10px;
 }
 nav a{
-    color: var(--black);
+    color: $black;
 }
 ul {
     height: 5vh;
@@ -78,7 +77,7 @@ li {
     height: 100vh;
     position: relative;
     display: flex;
-    background-color: var(--white);
+    background-color: $white;
     z-index: 1;
 }
 .home-image {
@@ -114,7 +113,7 @@ header h1 span img{
 }
 header a {
     margin: auto 8rem;
-    background-color: var(--yellow);
+    background-color: $yellow;
     padding: 2rem;
     border-radius: 48px;
     background: linear-gradient(145deg, #e4e6e6, #ffffff);
@@ -132,32 +131,32 @@ header a:hover {
 #about {
     width: 100%;
     height: 100vh;
-    background-color: var(--yellow);
+    background-color: $yellow;
     display: grid;
     place-items: center;
     justify-content: space-evenly;
     grid-template-columns: 1fr 1fr 1fr;
-}
-#about div {
-    position: relative;
-    height: 60vh;
-    width: 30vw;
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    border-radius: 4rem;
-    cursor: default;
-}
-#about div:hover {
-    box-shadow: 10px 18px 32px 10px rgba( 31, 38, 135, 0.37 );
+    div {
+        position: relative;
+        height: 60vh;
+        width: 30vw;
+        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+        border-radius: 4rem;
+        cursor: default;
+        &:hover{
+            box-shadow: 10px 18px 32px 10px rgba( 31, 38, 135, 0.37 );
+        }
+    }
 }
 #about div:nth-child(3){
     padding: 1rem;
 }
 #about div:nth-child(1), #about div:nth-child(3) {
-    background: var(--white);
+    background: $white;
 }
 #about div:nth-child(2){
     text-align: center; 
-    background:  var(--yellow);
+    background:  $yellow;
     transition: 0.5s ease-in-out;
 }
 #about div:nth-child(2):hover {
@@ -206,10 +205,13 @@ header a:hover {
     display: flex;
     flex-direction: column;
     backdrop-filter: blur(20px);
-    box-shadow: 3px 7px 40px 10px var(--green);
+    box-shadow: 3px 7px 40px 10px $green;
     transition: 0.5s ease-in-out;
     overflow: hidden;
     border-radius: 1rem;
+    &:hover {
+        box-shadow: 3px 7px 40px 10px $white;
+    }
 }
 .course-card div:nth-child(1){
     width: 90%;
@@ -225,26 +227,24 @@ header a:hover {
     position: absolute;
     transform: translateY(13rem);
     transition: 0.5s ease-in-out;
-    border-top: 1px solid var(--white);
+    border-top: 1px solid $white;
+    h3{
+        font-size: 2rem;
+        transform: translateY(1rem);
+        color: $white;
+    }
+    h4{
+        font-size: 1.4rem;
+        transform: translateY(1.5rem);
+        color: $yellow;
+    }
+    p{
+        font-size: 1.2rem;
+        transform: translateY(2rem);
+        opacity: 0;
+    }
 }
-.course-card div:nth-child(2) h3{
-    font-size: 2rem;
-    transform: translateY(1rem);
-    color: var(--white);
-}
-.course-card div:nth-child(2) h4{
-    font-size: 1.4rem;
-    transform: translateY(1.5rem);
-    color: var(--yellow);
-}
-.course-card div:nth-child(2) p {
-    font-size: 1.2rem;
-    transform: translateY(2rem);
-    opacity: 0;
-}
-.course-card:hover {
-    box-shadow: 3px 7px 40px 10px var(--white);
-}
+
 .course-card:hover div:nth-child(1) {
     opacity: 0.3;
 }
@@ -262,7 +262,7 @@ header a:hover {
 #team {
     width: 100%;
     height: 100vh;
-    background-color: var(--silver);
+    background-color: $silver;
     position: relative;
 }
 .team-title {
@@ -281,7 +281,7 @@ header a:hover {
 }
 .team-card {
     position: relative;
-    background: var(--transparent-yellow);
+    background: $transparent-yellow;
     width: 15rem;
     height: 20rem;
     margin: 2rem;
@@ -289,17 +289,17 @@ header a:hover {
 .team-image {
     width: 100%;
     height: 5rem;
-    background: var(--green);
+    background: $green;
     display: flex;
     justify-content: center;
-}
-.team-image img {
-    width: 6rem;
-    height: 6rem;
-    position: relative;
-    transform: translateY(2rem);
-    border: 1px solid black;
-    border-radius: 50%;
-    backdrop-filter: blur(40px);
+    img {
+        width: 6rem;
+        height: 6rem;
+        position: relative;
+        transform: translateY(2rem);
+        border: 1px solid $black;
+        border-radius: 50%;
+        backdrop-filter: blur(40px);
+    }
 }
 /* TEAM SECTION END*/
