--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   font-family: "Sora", sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-size: 1.2rem;
+  font-size: 1.2vw;
   color: #0B0500;
   scroll-behavior: smooth;
   -ms-scroll-snap-type: y proximity;
@@ -28,7 +28,7 @@ img {
 /* NAV BAR START */
 nav {
   width: 100%;
-  height: 12vh;
+  height: 10vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,6 +52,10 @@ nav:hover {
   background: rgba(255, 216, 0, 0.85);
 }
 
+nav a {
+  color: #0B0500;
+}
+
 .logo {
   margin-top: auto;
   margin-bottom: auto;
@@ -63,10 +67,6 @@ nav:hover {
 .logo:hover {
   border: 3px solid #00ac09;
   border-radius: 10px;
-}
-
-nav a {
-  color: #0B0500;
 }
 
 ul {
@@ -92,25 +92,25 @@ li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #FDFFFF;
   z-index: 1;
+  -webkit-box-flex: wrap;
+      -ms-flex: wrap;
+          flex: wrap;
 }
 
-.home-image {
-  width: 60%;
-  height: auto;
-  position: absolute;
-  right: 1rem;
-  top: 10vh;
+#home div {
+  width: 50vw;
 }
 
 header {
-  width: 40%;
-  height: 60vh;
-  margin-top: 25vh;
   text-align: center;
   position: relative;
-  margin-left: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -118,38 +118,39 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 40vw;
 }
 
 header h1 {
-  font-size: 6rem;
+  font-size: 5vw;
   -webkit-transition: 0.4s ease-in;
   transition: 0.4s ease-in;
-  letter-spacing: 0.5rem;
+  letter-spacing: 1vw;
+}
+
+header h1 span img {
+  width: 6vw;
+  position: relative;
+  -webkit-transform: translateY(1rem);
+          transform: translateY(1rem);
 }
 
 header h2 {
   letter-spacing: 0.9rem;
   -webkit-transition: 0.4s ease-in;
   transition: 0.4s ease-in;
-  margin-top: 2rem;
-}
-
-header h1 span img {
-  width: 5rem;
-  position: relative;
-  -webkit-transform: translateY(1rem);
-          transform: translateY(1rem);
+  margin-top: 1rem;
 }
 
 header a {
-  margin: auto 8rem;
+  margin: 5vh 9vw;
   background-color: #ffd800;
   padding: 2rem;
   border-radius: 48px;
   background: linear-gradient(145deg, #e4e6e6, #ffffff);
   -webkit-box-shadow: 12px 12px 24px #a2a3a3, -12px -12px 24px #ffffff;
           box-shadow: 12px 12px 24px #a2a3a3, -12px -12px 24px #ffffff;
-  font-size: 1.4rem;
+  font-size: 1.4vw;
   font-weight: bold;
   -webkit-transition: 2s ease-in-out;
   transition: 2s ease-in-out;
@@ -178,8 +179,8 @@ header a:hover {
 
 #about div {
   position: relative;
-  height: 60vh;
-  width: 30vw;
+  height: 50vh;
+  width: 25vw;
   -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   border-radius: 4rem;
