--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,4 @@
-$black: #0B0500;
-$yellow: #ffd800;
-$green: #00ac09;
-$white: #FDFFFF;
-$silver: #6B654B;
-$maintext: 'Sora', sans-serif;
-$transparent-yellow: rgba(255,	216,	0, 0.9);
+@import './variables';
 
 body {
     background-color: $white;
@@ -14,7 +8,7 @@ body {
     padding: 0;
     font-family: $maintext;
     box-sizing: border-box;
-    font-size: 1.2rem;
+    font-size: 1.2vw;
     color: $black;
     scroll-behavior: smooth;
     scroll-snap-type: y proximity;
@@ -28,278 +22,21 @@ img {
 }
 
 /* NAV BAR START */
-nav{
-    width: 100%; 
-    height: 12vh;
-    display: flex;
-    justify-content: space-between;
-    background: rgba(253, 255, 255, 0.7);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 7.0px );
-    -webkit-backdrop-filter: blur( 7.0px );
-    position: fixed;
-    z-index: 999;
-    transition: 0.7s ease-in-out;
-    text-transform: uppercase;
-    font-size: 1rem;
-}
-nav:hover {
-    background: rgba( 255, 216, 0, 0.85 );  
-}
-.logo {
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 1rem;
-    width: 3rem; height: 3rem;
-}
-.logo:hover {
-    border: 3px solid $green;
-    border-radius: 10px;
-}
-nav a{
-    color: $black;
-}
-ul {
-    height: 5vh;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-}
-li {
-    list-style-type: none;
-    margin-right: 2rem;
-}
+@import './navbar';
 /* NAV BAR END */
 
 /* HOME PAGE SECTION start*/
-#home {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    display: flex;
-    background-color: $white;
-    z-index: 1;
-}
-.home-image {
-    width: 60%;
-    height: auto;
-    position: absolute;
-    right: 1rem; top: 10vh;
-}
-header {
-    width: 40%;
-    height: 60vh;
-    margin-top: 25vh; 
-    text-align: center;
-    position: relative;
-    margin-left: 1.5rem;
-    display: flex;
-    flex-direction: column;
-}
-header h1 {
-    font-size: 6rem;
-    transition: 0.4s ease-in;
-    letter-spacing: 0.5rem;
-}
-header h2 {
-    letter-spacing: 0.9rem;
-    transition: 0.4s ease-in;
-    margin-top: 2rem;
-}
-header h1 span img{
-    width: 5rem;
-    position: relative;
-    transform: translateY(1rem);
-}
-header a {
-    margin: auto 8rem;
-    background-color: $yellow;
-    padding: 2rem;
-    border-radius: 48px;
-    background: linear-gradient(145deg, #e4e6e6, #ffffff);
-    box-shadow:  12px 12px 24px #a2a3a3, -12px -12px 24px #ffffff;
-    font-size: 1.4rem;
-    font-weight: bold;
-    transition: 2s ease-in-out;
-}
-header a:hover {
-    background: linear-gradient(to top,  #ffe700 5%, #e6c200 100%);
-}
+@import './home_section';
 /* HOME PAGE SECTION end*/
 
 /*ABOUT section start*/
-#about {
-    width: 100%;
-    height: 100vh;
-    background-color: $yellow;
-    display: grid;
-    place-items: center;
-    justify-content: space-evenly;
-    grid-template-columns: 1fr 1fr 1fr;
-    div {
-        position: relative;
-        height: 60vh;
-        width: 30vw;
-        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-        border-radius: 4rem;
-        cursor: default;
-        &:hover{
-            box-shadow: 10px 18px 32px 10px rgba( 31, 38, 135, 0.37 );
-        }
-    }
-}
-#about div:nth-child(3){
-    padding: 1rem;
-}
-#about div:nth-child(1), #about div:nth-child(3) {
-    background: $white;
-}
-#about div:nth-child(2){
-    text-align: center; 
-    background:  $yellow;
-    transition: 0.5s ease-in-out;
-}
-#about div:nth-child(2):hover {
-    background: rgba(253,255,255, 0.9);
-}
-#about div:nth-child(2) h1 {
-    font-size: 2.5rem;
-    margin-top: 2rem;
-}
-#about div:nth-child(2) p {
-    padding: 1.5rem;
-}
+@import './about_section';
 /*ABOUT section end*/
 
 /*COURSES section start*/
-#courses {
-    position: relative;
-    width: 100%;
-    height: 200vh;
-}
-.courses-bg h1{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0; top: 0; right: 0; bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: -111;
-    font-size: 15rem;
-    line-height: 200vh;
-}
-.courses {
-    position: relative;
-    width: 100%;
-    height: 200vh;
-    display: grid;
-    place-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    background: rgba(0.0, 192.0, 11.0, .8);
-}
-.course-card {
-    position: relative;
-    width: 20rem;
-    height: 20rem;
-    display: flex;
-    flex-direction: column;
-    backdrop-filter: blur(20px);
-    box-shadow: 3px 7px 40px 10px $green;
-    transition: 0.5s ease-in-out;
-    overflow: hidden;
-    border-radius: 1rem;
-    &:hover {
-        box-shadow: 3px 7px 40px 10px $white;
-    }
-}
-.course-card div:nth-child(1){
-    width: 90%;
-    height: 13rem;
-    margin: 1rem auto;
-}
-.course-card div:nth-child(2) {
-    width: 20rem;
-    height: 20rem;
-    display: flex;
-    flex-direction: column;
-    padding: 0 1rem;
-    position: absolute;
-    transform: translateY(13rem);
-    transition: 0.5s ease-in-out;
-    border-top: 1px solid $white;
-    h3{
-        font-size: 2rem;
-        transform: translateY(1rem);
-        color: $white;
-    }
-    h4{
-        font-size: 1.4rem;
-        transform: translateY(1.5rem);
-        color: $yellow;
-    }
-    p{
-        font-size: 1.2rem;
-        transform: translateY(2rem);
-        opacity: 0;
-    }
-}
-
-.course-card:hover div:nth-child(1) {
-    opacity: 0.3;
-}
-.course-card:hover div:nth-child(2){
-    transform: translateY(0rem);
-    backdrop-filter: blur(20px);
-    border: none;
-}
-.course-card:hover div:nth-child(2) p{
-    opacity: 1;
-}
+@import './courses_section';
 /*COURSES section end*/
 
 /* TEAM SECTION START*/
-#team {
-    width: 100%;
-    height: 100vh;
-    background-color: $silver;
-    position: relative;
-}
-.team-title {
-    text-align: center;
-    width: 100%;
-    position: absolute;
-}
-.team {
-    position: relative;
-    width: auto;
-    overflow-x: hidden;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-.team-card {
-    position: relative;
-    background: $transparent-yellow;
-    width: 15rem;
-    height: 20rem;
-    margin: 2rem;
-}
-.team-image {
-    width: 100%;
-    height: 5rem;
-    background: $green;
-    display: flex;
-    justify-content: center;
-    img {
-        width: 6rem;
-        height: 6rem;
-        position: relative;
-        transform: translateY(2rem);
-        border: 1px solid $black;
-        border-radius: 50%;
-        backdrop-filter: blur(40px);
-    }
-}
+@import './team_section';
 /* TEAM SECTION END*/
