--- a/css/_about_section.scss
+++ b/css/_about_section.scss
@@ -35,7 +35,7 @@
     background: rgba(253,255,255, 0.9);
 }
 #about div:nth-child(2) h1 {
-    font-size: 2.5rem;
+    font-size: 3vw;
     margin-top: 2rem;
 }
 #about div:nth-child(2) p {
