--- a/css/_team_section.scss
+++ b/css/_team_section.scss
@@ -3,43 +3,124 @@
 #team {
     width: 100%;
     height: 100vh;
-    background-color: $silver;
+    background-color: $white;
     position: relative;
 }
 .team-title {
     text-align: center;
-    width: 100%;
-    position: absolute;
+    width: 100%; 
+    height: 22vh;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    h1{
+        font-size: 3rem;
+    }
 }
 .team {
     position: relative;
-    width: auto;
+    height: 78vh;
+    width: 100%;
     overflow-x: hidden;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
 .team-card {
     position: relative;
-    background: $transparent-yellow;
-    width: 15rem;
-    height: 20rem;
-    margin: 2rem;
-}
-.team-image {
-    width: 100%;
-    height: 5rem;
-    background: $green;
-    display: flex;
-    justify-content: center;
-    img {
-        width: 6rem;
-        height: 6rem;
-        position: relative;
-        transform: translateY(2rem);
-        border: 1px solid $black;
+    background: $yellow;
+    width: 18rem;
+    height: 25rem;
+    box-shadow: 0px 10px 13px -7px #000000, 0px 0px 18px 10px rgba(0,0,0,0.11);
+    overflow: hidden;
+    transition: .5s ease-in;
+    padding: 1rem;
+    .team-image {
+        margin: 2rem auto;
+        width: 10rem;
+        height: 10rem;
         border-radius: 50%;
-        backdrop-filter: blur(40px);
+        overflow: hidden;
+        transition: .5s ease-in;
+    }
+    .team-header {
+        text-align: center;
+        width: 100%;
+        h1{
+            font-size: 1.3rem;
+            font-weight: bolder;
+            transition: .5s ease-in;
+        }
+        h3 {
+            font-size: 1rem;
+            margin-top: 1rem;
+            color: $silver;
+        }
+    }
+    .team-hover {
+        position: absolute;
+        display: none;
+        top: 0; left: 0; right: 0; bottom: 0;
+        backdrop-filter: blur(20px);
+    }
+    &:hover {
+        -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 23px 16px rgba(0,0,0,0.26); 
+        box-shadow: 0px 10px 13px -7px #000000, 0px 0px 23px 16px rgba(0,0,0,0.26);
+    }
+    &:hover .team-hover {
+        display: block;
+    }
+    &:hover .team-info {
+        transform: translateY(-13rem);
+        opacity: 1;
+    }
+    &:hover .team-header h3 {
+        display: none;
+    }
+    &:hover .team-header h1 {
+        transform: translateY(-13rem);
+    }
+    .team-info {
+        color: $black;
+        font-size: 2rem;
+        text-align: center;
+        transform: translateY(15rem);
+        opacity: 0;  
+        transition: .5s ease-in;
+        margin-top: 3rem;
+        width: 100%;
+        padding: 1rem;
+        p {
+            margin: 1rem;
+            font-size: 1.2rem;
+            font-weight: bolder;
+        }
+        .team-card-icon{
+            width: 100%;
+            margin: auto;
+            color: $black;
+            display: flex;
+            justify-content: space-evenly;
+            margin-top: 5rem;
+            a {
+                width: 3rem;
+                height: 3rem;
+                border: 2px solid $black;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: .3s ease-in-out;
+                i {
+                    font-size: 1.5rem;
+                    color: $black;
+                }
+                &:hover {
+                    background: $black;
+                }
+                &:hover i{
+                    color: $yellow;
+                }
+            }
+        }   
     }
 }
