--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -3,5 +3,6 @@ $yellow: #ffd800;
 $green: #00ac09;
 $white: #FDFFFF;
 $silver: #6B654B;
+$red: #ff0e00;
 $maintext: 'Sora', sans-serif;
 $transparent-yellow: rgba(255,	216,	0, 0.9);
