--- a/css/_team_section.scss
+++ b/css/_team_section.scss
@@ -33,7 +33,7 @@
     height: 25rem;
     box-shadow: 0px 10px 13px -7px #000000, 0px 0px 18px 10px rgba(0,0,0,0.11);
     overflow: hidden;
-    transition: .5s ease-in;
+    transition: .5s ease-in-out;
     padding: 1rem;
     .team-image {
         margin: 2rem auto;
@@ -42,6 +42,9 @@
         border-radius: 50%;
         overflow: hidden;
         transition: .5s ease-in;
+        img{
+            height: 15rem;
+        }
     }
     .team-header {
         text-align: center;
