--- a/css/style.css
+++ b/css/style.css
@@ -406,8 +406,8 @@ header a:hover {
   -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 18px 10px rgba(0, 0, 0, 0.11);
           box-shadow: 0px 10px 13px -7px #000000, 0px 0px 18px 10px rgba(0, 0, 0, 0.11);
   overflow: hidden;
-  -webkit-transition: .5s ease-in;
-  transition: .5s ease-in;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
   padding: 1rem;
 }
 
@@ -419,6 +419,10 @@ header a:hover {
   overflow: hidden;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
+}
+
+.team-card .team-image img {
+  height: 15rem;
 }
 
 .team-card .team-header {
