--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ header a:hover {
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   border-radius: 4rem;
   cursor: default;
+  overflow: hidden;
 }
 
 #about div:hover {
