--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -5,4 +5,5 @@ $white: #FDFFFF;
 $silver: #6B654B;
 $red: #ff0e00;
 $maintext: 'Sora', sans-serif;
+$handwriting-text: 'Dancing Script', cursive;
 $transparent-yellow: rgba(255,	216,	0, 0.9);
