--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -1,6 +1,7 @@
 @import "./variables";
 
 nav{
+    position: fixed;
     width: 100%; 
     height: 10vh;
     display: flex;
@@ -9,34 +10,61 @@ nav{
     background: rgba(253, 255, 255, 0.7);
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 7.0px );
-    -webkit-backdrop-filter: blur( 7.0px );
-    position: fixed;
     z-index: 999;
     transition: 0.7s ease-in-out;
     text-transform: uppercase;
     font-size: 1.2vw;
+    .logo {
+        margin-left: 1rem;
+        width: 3rem; height: 3rem;
+        &:hover {
+            border: 3px solid $green;
+            border-radius: 10px;
+        }
+    }    
+    .nav-line {
+        width: 40vw;
+        height: 5vh;
+        transition: 0.7s ease-in-out; 
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        p {
+            font-family: $handwriting-text;
+            font-size: 1.4vw;
+            margin: 1rem;
+            animation: nav-text 10s ease-in-out 1s infinite forwards fill;
+            // @keyframes nav-text {
+            //     0% {
+            //         transform: translateY(5vh);
+            //     }
+            //     50% {
+            //         transform: translateY(5vh);
+            //     }
+            //     100% {
+            //         transform: translateY(5vh);
+            //     }
+            // }
+        }
+    }
+    ul {
+        display: flex;
+        li {
+            list-style-type: none;
+            margin-right: 4vw;
+            a{
+            color: $black;
+            text-decoration-line: none;
+            &:hover {
+                color: $black;
+                text-decoration-line: none;        
+                }
+            }
+        }
+    }
     &:hover {
-        background: rgba( 255, 216, 0, 0.85 );  
-    }
-    a{
-        color: $black;
-    }
-}
-
-.logo {
-    margin-left: 1rem;
-    width: 3rem; height: 3rem;
-    &:hover {
-        border: 3px solid $green;
-        border-radius: 10px;
-    }
-}
-ul {
-    height: 5vh;
-    display: flex;
-    align-items: center;
-}
-li {
-    list-style-type: none;
-    margin-right: 4vw;
+        background: rgba( 255, 216, 0, 0.85 );
+    }   
 }
