--- a/css/_team_section.scss
+++ b/css/_team_section.scss
@@ -1,10 +1,11 @@
 @import "variables";
 
-#team {
+#team, .swiper-container {
     width: 100%;
     height: 100vh;
     background-color: $white;
     position: relative;
+    overflow-x: hidden;
 }
 .team-title {
     text-align: center;
@@ -17,24 +18,25 @@
         font-size: 3rem;
     }
 }
-.team {
+.team, .swiper-wrapper {
     position: relative;
     height: 78vh;
-    width: 100%;
+    width: 500rem;
     overflow-x: hidden;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-.team-card {
+.team-card, .swiper-slide {
     position: relative;
     background: $yellow;
-    width: 18rem;
+    width: 20rem;
     height: 25rem;
     box-shadow: 0px 10px 13px -7px #000000, 0px 0px 18px 10px rgba(0,0,0,0.11);
     overflow: hidden;
     transition: .5s ease-in-out;
     padding: 1rem;
+    margin: 0 3rem;
     .team-image {
         margin: 2rem auto;
         width: 10rem;
@@ -50,12 +52,12 @@
         text-align: center;
         width: 100%;
         h1{
-            font-size: 1.3rem;
+            font-size: 1.6vw;
             font-weight: bolder;
             transition: .5s ease-in;
         }
         h3 {
-            font-size: 1rem;
+            font-size: 1.3vw;
             margin-top: 1rem;
             color: $silver;
         }
