--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ img {
 
 /* NAV BAR START */
 nav {
+  position: fixed;
   width: 100%;
   height: 10vh;
   display: -webkit-box;
@@ -41,9 +42,8 @@ nav {
   background: rgba(253, 255, 255, 0.7);
   -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
           box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
-  position: fixed;
+          backdrop-filter: blur(7px);
   z-index: 999;
   -webkit-transition: 0.7s ease-in-out;
   transition: 0.7s ease-in-out;
@@ -51,38 +51,71 @@ nav {
   font-size: 1.2vw;
 }
 
-nav:hover {
-  background: rgba(255, 216, 0, 0.85);
-}
-
-nav a {
-  color: #0B0500;
-}
-
-.logo {
+nav .logo {
   margin-left: 1rem;
   width: 3rem;
   height: 3rem;
 }
 
-.logo:hover {
+nav .logo:hover {
   border: 3px solid #00ac09;
   border-radius: 10px;
 }
 
-ul {
+nav .nav-line {
+  width: 40vw;
   height: 5vh;
+  -webkit-transition: 0.7s ease-in-out;
+  transition: 0.7s ease-in-out;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-li {
+nav .nav-line p {
+  font-family: "Dancing Script", cursive;
+  font-size: 1.4vw;
+  margin: 1rem;
+  -webkit-animation: nav-text 10s ease-in-out 1s infinite forwards fill;
+          animation: nav-text 10s ease-in-out 1s infinite forwards fill;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav ul li {
   list-style-type: none;
   margin-right: 4vw;
+}
+
+nav ul li a {
+  color: #0B0500;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+nav ul li a:hover {
+  color: #0B0500;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+nav:hover {
+  background: rgba(255, 216, 0, 0.85);
 }
 
 /* NAV BAR END */
@@ -120,6 +153,9 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -152,7 +188,7 @@ header h2 {
 header a {
   margin: 5vh 9vw;
   background-color: #ffd800;
-  padding: 2rem;
+  padding: 2rem 5rem;
   border-radius: 48px;
   background: linear-gradient(145deg, #e4e6e6, #ffffff);
   -webkit-box-shadow: 12px 12px 24px #a2a3a3, -12px -12px 24px #ffffff;
@@ -161,6 +197,9 @@ header a {
   font-weight: bold;
   -webkit-transition: 2s ease-in-out;
   transition: 2s ease-in-out;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+  color: #0B0500;
 }
 
 header a:hover {
@@ -360,11 +399,12 @@ header a:hover {
 
 /*COURSES section end*/
 /* TEAM SECTION START*/
-#team {
+#team, .swiper-container {
   width: 100%;
   height: 100vh;
   background-color: #FDFFFF;
   position: relative;
+  overflow-x: hidden;
 }
 
 .team-title {
@@ -386,10 +426,10 @@ header a:hover {
   font-size: 3rem;
 }
 
-.team {
+.team, .swiper-wrapper {
   position: relative;
   height: 78vh;
-  width: 100%;
+  width: 500rem;
   overflow-x: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -402,10 +442,10 @@ header a:hover {
           justify-content: space-evenly;
 }
 
-.team-card {
+.team-card, .swiper-slide {
   position: relative;
   background: #ffd800;
-  width: 18rem;
+  width: 20rem;
   height: 25rem;
   -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 18px 10px rgba(0, 0, 0, 0.11);
           box-shadow: 0px 10px 13px -7px #000000, 0px 0px 18px 10px rgba(0, 0, 0, 0.11);
@@ -413,9 +453,10 @@ header a:hover {
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   padding: 1rem;
+  margin: 0 3rem;
 }
 
-.team-card .team-image {
+.team-card .team-image, .swiper-slide .team-image {
   margin: 2rem auto;
   width: 10rem;
   height: 10rem;
@@ -425,29 +466,29 @@ header a:hover {
   transition: .5s ease-in;
 }
 
-.team-card .team-image img {
+.team-card .team-image img, .swiper-slide .team-image img {
   height: 15rem;
 }
 
-.team-card .team-header {
+.team-card .team-header, .swiper-slide .team-header {
   text-align: center;
   width: 100%;
 }
 
-.team-card .team-header h1 {
-  font-size: 1.3rem;
+.team-card .team-header h1, .swiper-slide .team-header h1 {
+  font-size: 1.6vw;
   font-weight: bolder;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
 
-.team-card .team-header h3 {
-  font-size: 1rem;
+.team-card .team-header h3, .swiper-slide .team-header h3 {
+  font-size: 1.3vw;
   margin-top: 1rem;
   color: #6B654B;
 }
 
-.team-card .team-hover {
+.team-card .team-hover, .swiper-slide .team-hover {
   position: absolute;
   display: none;
   top: 0;
@@ -458,31 +499,31 @@ header a:hover {
           backdrop-filter: blur(20px);
 }
 
-.team-card:hover {
+.team-card:hover, .swiper-slide:hover {
   -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 23px 16px rgba(0, 0, 0, 0.26);
   box-shadow: 0px 10px 13px -7px #000000, 0px 0px 23px 16px rgba(0, 0, 0, 0.26);
 }
 
-.team-card:hover .team-hover {
+.team-card:hover .team-hover, .swiper-slide:hover .team-hover {
   display: block;
 }
 
-.team-card:hover .team-info {
+.team-card:hover .team-info, .swiper-slide:hover .team-info {
   -webkit-transform: translateY(-13rem);
           transform: translateY(-13rem);
   opacity: 1;
 }
 
-.team-card:hover .team-header h3 {
+.team-card:hover .team-header h3, .swiper-slide:hover .team-header h3 {
   display: none;
 }
 
-.team-card:hover .team-header h1 {
+.team-card:hover .team-header h1, .swiper-slide:hover .team-header h1 {
   -webkit-transform: translateY(-13rem);
           transform: translateY(-13rem);
 }
 
-.team-card .team-info {
+.team-card .team-info, .swiper-slide .team-info {
   color: #0B0500;
   font-size: 2rem;
   text-align: center;
@@ -496,13 +537,13 @@ header a:hover {
   padding: 1rem;
 }
 
-.team-card .team-info p {
+.team-card .team-info p, .swiper-slide .team-info p {
   margin: 1rem;
   font-size: 1.2rem;
   font-weight: bolder;
 }
 
-.team-card .team-info .team-card-icon {
+.team-card .team-info .team-card-icon, .swiper-slide .team-info .team-card-icon {
   width: 100%;
   margin: auto;
   color: #0B0500;
@@ -515,7 +556,7 @@ header a:hover {
   margin-top: 5rem;
 }
 
-.team-card .team-info .team-card-icon a {
+.team-card .team-info .team-card-icon a, .swiper-slide .team-info .team-card-icon a {
   width: 3rem;
   height: 3rem;
   border: 2px solid #0B0500;
@@ -532,16 +573,16 @@ header a:hover {
   transition: .3s ease-in-out;
 }
 
-.team-card .team-info .team-card-icon a i {
+.team-card .team-info .team-card-icon a i, .swiper-slide .team-info .team-card-icon a i {
   font-size: 1.5rem;
   color: #0B0500;
 }
 
-.team-card .team-info .team-card-icon a:hover {
+.team-card .team-info .team-card-icon a:hover, .swiper-slide .team-info .team-card-icon a:hover {
   background: #0B0500;
 }
 
-.team-card .team-info .team-card-icon a:hover i {
+.team-card .team-info .team-card-icon a:hover i, .swiper-slide .team-info .team-card-icon a:hover i {
   color: #ffd800;
 }
 
