--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,9 +1,10 @@
 $black: #0B0500;
+$black-2: #333333;
 $yellow: #ffd800;
 $green: #00ac09;
 $white: #FDFFFF;
 $silver: #6B654B;
 $red: #ff0e00;
 $maintext: 'Sora', sans-serif;
-$handwriting-text: 'Dancing Script', cursive;
+$handwriting-text: 'Karla', sans-serif;
 $transparent-yellow: rgba(255,	216,	0, 0.9);
