--- a/css/_about_section.scss
+++ b/css/_about_section.scss
@@ -8,6 +8,7 @@
     place-items: center;
     justify-content: space-evenly;
     grid-template-columns: 1fr 1fr 1fr;
+    color: $black-2;
     div {
         position: relative;
         height: 50vh;
@@ -16,6 +17,7 @@
         border-radius: 4rem;
         cursor: default;
         overflow: hidden;
+        color: $black-2;
         &:hover{
             box-shadow: 10px 18px 32px 10px rgba( 31, 38, 135, 0.37 );
         }
