--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -14,6 +14,7 @@ nav{
     transition: 0.7s ease-in-out;
     text-transform: uppercase;
     font-size: 1.2vw;
+    color: $black-2;
     .logo {
         margin-left: 1rem;
         width: 3rem; height: 3rem;
@@ -23,30 +24,25 @@ nav{
         }
     }    
     .nav-line {
+        position: relative;
         width: 40vw;
         height: 5vh;
         transition: 0.7s ease-in-out; 
         overflow: hidden;
-        display: flex;
+        display: flex;  
         flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
         p {
             font-family: $handwriting-text;
             font-size: 1.4vw;
-            margin: 1rem;
-            animation: nav-text 10s ease-in-out 1s infinite forwards fill;
-            // @keyframes nav-text {
-            //     0% {
-            //         transform: translateY(5vh);
-            //     }
-            //     50% {
-            //         transform: translateY(5vh);
-            //     }
-            //     100% {
-            //         transform: translateY(5vh);
-            //     }
-            // }
+            letter-spacing: 0.5vw;
+            margin: auto;
+            line-height: 5vh;
+            animation: nav-text 7s ease-in-out 1s infinite forwards alternate;
+            @keyframes nav-text {
+            0% {transform: translateY(0vh);}
+            50% {transform: translateY(-5vh);}
+            100% {transform: translateY(-10vh);}
+            }
         }
     }
     ul {
@@ -66,5 +62,6 @@ nav{
     }
     &:hover {
         background: rgba( 255, 216, 0, 0.85 );
+        color: $black;
     }   
 }
