--- a/css/_team_section.scss
+++ b/css/_team_section.scss
@@ -18,7 +18,8 @@
         font-size: 3rem;
         border-left: 1vw solid $yellow;
         border-right: 1vw solid $yellow;
-        padding: 0 1vw;
+        padding: 0 1vw;    
+        color: $black-2;
     }
 }
 .team, .swiper-wrapper {
