404 and contact section added

--- a/css/style.scss
+++ b/css/style.scss
@@ -40,3 +40,7 @@ img {
 /* TEAM SECTION START*/
 @import './team_section';
 /* TEAM SECTION END*/
+
+/* TEAM SECTION START*/
+@import './contact_section';
+/* TEAM SECTION END*/
