--- a/css/style.css
+++ b/css/style.css
@@ -622,4 +622,36 @@ header a:hover {
 }
 
 /* TEAM SECTION END*/
+/* TEAM SECTION START*/
+#contact {
+  width: 100%;
+  height: 100vh;
+  background: #ffd800;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+#contact .contact {
+  width: 80vw;
+  height: 75vh;
+  background: #FDFFFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#contact .contact .left-contact {
+  height: 100%;
+  width: 60%;
+  background: #333333;
+}
+
+#contact .contact .right-contact {
+  height: 100%;
+  width: 40%;
+  background: #FDFFFF;
+}
+
+/* TEAM SECTION END*/
 /*# sourceMappingURL=style.css.map */
