--- a/css/_contact_section.scss
+++ b/css/_contact_section.scss
@@ -11,15 +11,79 @@
         height: 75vh;
         background: $white;
         display: flex;
+        position: relative;
+        box-shadow: 0px 0px 20px $black-2; 
         .left-contact {
-            height: 100%;
-            width: 60%;
-            background: $black-2;
+            position: relative;
+            padding-left: 10vw; padding-right: 40vw;
+            padding-top: 4vh;
+            display: flex;
+            flex-direction: column;
+            h1 {
+                font-size: 5vw;
+            }
+            p {
+                font-size: 1.4vw;
+                margin-top: 2vh;
+            }
+            input {
+                margin-top: 2.5vh;
+                width: 100%; height: 6vh;
+                border: none;
+                box-shadow: 1px 1px 2px $black-2;
+            }
+            input::placeholder {
+                color: $black-2;
+            }
+            input[type="text"], input[type="email"]{
+                padding-left: 1rem;
+            }
+            input[type="button"]{
+                background: $black-2;
+                color: $white;
+                height: 10vh;
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+            span{
+                position: absolute;
+                width: 4vw; height: 8vh;
+            }
+            .yellow-box-1 {
+                left: 2vw; top: 30vh;
+                background: $black-2;
+                transform: rotate(45deg);
+            }
+            .yellow-box-2 {
+                left: 44vw; top: 6vh;
+                z-index: 1;
+                background: $yellow;
+            }
         }
         .right-contact {
-            height: 100%;
-            width: 40%;
-            background: $white
+            position: absolute;
+            right: -5vw; top: 10vh;
+            height: 55vh;
+            width: 40vw;
+            background: $black-2;
+            box-shadow: 14px 15px 50px $black-2 ; 
+            display: flex;
+            flex-direction: column;
+            padding-left: 5vw;
+            div {
+                display: flex;
+                margin-top: 5vh;
+                i, p, h1{
+                    color: $white;
+                }
+                h1 {
+                    font-size: 4vw;
+                }
+                p {
+                    margin-left: 2vw;
+                }
+            }
         }
     }
 }
