--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,26 @@ nav .menu-btn span {
   border-radius: 2.5px;
 }
 
+nav .menu-exit-btn {
+  width: 30px;
+  height: 25px;
+  display: none;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+nav .menu-exit-btn span {
+  width: 100%;
+  height: 8px;
+  background: #333333;
+  position: absolute;
+}
+
 @media only screen and (max-width: 666px) {
   nav {
     -ms-flex-pack: distribute;
@@ -179,6 +199,14 @@ nav .menu-btn span {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+  nav .menu-exit-btn span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  nav .menu-exit-btn span:nth-child(2) {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
   }
   nav .logo {
     width: 5rem;
