--- a/css/_about_section.scss
+++ b/css/_about_section.scss
@@ -45,3 +45,27 @@
 #about div:nth-child(2) p {
     padding: 1.5rem;
 }
+@media only screen and (max-width: 666px) {
+    #about {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        padding: 5rem;
+        div {
+            width: 80vw;
+            margin-top: 5rem;
+            margin-bottom: 5rem;
+        }
+        div:nth-child(2){
+            background: $white;
+            padding: 1rem;
+            h1 {
+                font-size: 6vw;
+            }
+            p{
+                font-size: 3.5vw;
+                margin-top: 1rem;
+            }
+        }
+    }
+}
