--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -116,6 +116,7 @@ nav{
             width: 60vw;
             p {
             font-size: 2.2vw;
+            font-weight: bolder;
             }
         }
     }
